--- a/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/Controller/BYRechargeUsdtVC.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/Controller/BYRechargeUsdtVC.xib
@@ -17,9 +17,9 @@
                 <outlet property="tableView" destination="WGF-8w-zTJ" id="Zft-X2-2bY"/>
                 <outlet property="tableViewBtm2BannerCons" destination="GEr-jH-3kb" id="9FX-vO-fQP"/>
                 <outlet property="tableViewBtm2SafeAreaCons" destination="b7t-cP-Gj0" id="FQ3-GY-AAN"/>
-                <outlet property="tableViewTop2BannerInsetCons" destination="oOt-RS-E1O" id="2WV-eV-9Th"/>
+                <outlet property="tableViewTop2BannerInsetCons" destination="Aff-LK-5hx" id="yNv-pg-Hkd"/>
                 <outlet property="tableViewTop2BgViewCons" destination="cNY-S0-s3g" id="ae7-hx-ty9"/>
-                <outlet property="topBanner" destination="yGy-Cr-D0Z" id="XhU-PZ-DYm"/>
+                <outlet property="topBanner" destination="a0g-92-eoF" id="M59-IG-Fjt"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -28,21 +28,13 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="912"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yGy-Cr-D0Z" customClass="SDCycleScrollView">
+                <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a0g-92-eoF">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="187.5"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <gestureRecognizers/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="yGy-Cr-D0Z" secondAttribute="height" multiplier="375:170" id="Lsp-CU-Lnz"/>
+                        <constraint firstAttribute="width" secondItem="a0g-92-eoF" secondAttribute="height" multiplier="375:170" id="FcN-g0-9Uh"/>
                     </constraints>
-                </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" delaysContentTouches="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WGF-8w-zTJ">
-                    <rect key="frame" x="0.0" y="12.5" width="414" height="747.5"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <connections>
-                        <outlet property="dataSource" destination="-1" id="t92-nr-bJj"/>
-                        <outlet property="delegate" destination="-1" id="CDe-aS-Kv5"/>
-                    </connections>
-                </tableView>
+                </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eq8-c9-ddn">
                     <rect key="frame" x="0.0" y="760" width="414" height="152"/>
                     <subviews>
@@ -75,22 +67,30 @@
                         <constraint firstItem="kfu-ix-ppz" firstAttribute="leading" secondItem="Eq8-c9-ddn" secondAttribute="leading" constant="15" id="yVs-hz-qb7"/>
                     </constraints>
                 </view>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" delaysContentTouches="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WGF-8w-zTJ">
+                    <rect key="frame" x="0.0" y="12.5" width="414" height="747.5"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="t92-nr-bJj"/>
+                        <outlet property="delegate" destination="-1" id="CDe-aS-Kv5"/>
+                    </connections>
+                </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="WGF-8w-zTJ" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="024-GG-jQS"/>
-                <constraint firstItem="yGy-Cr-D0Z" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="AvE-hu-qSI"/>
+                <constraint firstItem="a0g-92-eoF" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="1qP-OP-jdp"/>
+                <constraint firstItem="a0g-92-eoF" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="9nH-Uv-haU"/>
+                <constraint firstItem="WGF-8w-zTJ" firstAttribute="top" secondItem="a0g-92-eoF" secondAttribute="bottom" priority="750" constant="-175" id="Aff-LK-5hx"/>
                 <constraint firstItem="Eq8-c9-ddn" firstAttribute="bottom" secondItem="Q5M-cg-NOt" secondAttribute="bottom" constant="34" id="F3r-Yn-TNL"/>
                 <constraint firstItem="Eq8-c9-ddn" firstAttribute="top" secondItem="WGF-8w-zTJ" secondAttribute="bottom" priority="750" id="GEr-jH-3kb"/>
                 <constraint firstItem="Eq8-c9-ddn" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="LKa-ia-axI"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="a0g-92-eoF" secondAttribute="trailing" id="QCC-Kc-EM4"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="WGF-8w-zTJ" secondAttribute="trailing" id="UH7-og-T8C"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="Eq8-c9-ddn" secondAttribute="trailing" id="ZaQ-d7-NY5"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="WGF-8w-zTJ" secondAttribute="bottom" priority="250" constant="10" id="b7t-cP-Gj0"/>
                 <constraint firstItem="WGF-8w-zTJ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" priority="250" constant="15" id="cNY-S0-s3g"/>
-                <constraint firstItem="WGF-8w-zTJ" firstAttribute="top" secondItem="yGy-Cr-D0Z" secondAttribute="bottom" priority="750" constant="-175" id="oOt-RS-E1O"/>
-                <constraint firstItem="yGy-Cr-D0Z" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="v4b-2A-Zy9"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="yGy-Cr-D0Z" secondAttribute="trailing" id="xoo-SU-T9T"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
