--- a/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/Controller/BYRechargeUsdtVC.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/Controller/BYRechargeUsdtVC.xib
@@ -13,7 +13,6 @@
             <connections>
                 <outlet property="btmBanner" destination="kfu-ix-ppz" id="vKA-4I-Mnw"/>
                 <outlet property="btmBannerBg" destination="Eq8-c9-ddn" id="HL6-Au-PQq"/>
-                <outlet property="btmBannerControl" destination="1Ci-pd-JZ4" id="Eyq-of-tRL"/>
                 <outlet property="tableView" destination="WGF-8w-zTJ" id="Zft-X2-2bY"/>
                 <outlet property="tableViewBtm2BannerCons" destination="GEr-jH-3kb" id="9FX-vO-fQP"/>
                 <outlet property="tableViewBtm2SafeAreaCons" destination="b7t-cP-Gj0" id="FQ3-GY-AAN"/>
@@ -28,26 +27,32 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="912"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a0g-92-eoF">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pHv-Np-2GG">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="187.5"/>
+                    <connections>
+                        <action selector="didTapTopBannerImage:" destination="-1" eventType="touchUpInside" id="VEf-o6-KtK"/>
+                    </connections>
+                </button>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gg" translatesAutoresizingMaskIntoConstraints="NO" id="a0g-92-eoF">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="187.5"/>
+                    <accessibility key="accessibilityConfiguration">
+                        <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
+                    </accessibility>
                     <gestureRecognizers/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="a0g-92-eoF" secondAttribute="height" multiplier="375:170" id="FcN-g0-9Uh"/>
                     </constraints>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eq8-c9-ddn">
-                    <rect key="frame" x="0.0" y="760" width="414" height="152"/>
+                    <rect key="frame" x="0.0" y="706.5" width="414" height="171.5"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kfu-ix-ppz" customClass="SDCycleScrollView">
-                            <rect key="frame" x="15" y="32" width="384" height="120"/>
+                            <rect key="frame" x="15" y="38" width="384" height="133.5"/>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="120" id="fwa-N5-xSw"/>
+                                <constraint firstAttribute="width" secondItem="kfu-ix-ppz" secondAttribute="height" multiplier="345:120" id="JnL-lc-gcO"/>
                             </constraints>
                         </view>
-                        <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="1Ci-pd-JZ4">
-                            <rect key="frame" x="316" y="4" width="123" height="28"/>
-                        </pageControl>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="教程引导" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UT0-id-DMz">
                             <rect key="frame" x="15" y="8.5" width="65.5" height="19.5"/>
                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
@@ -55,20 +60,19 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemYellowColor"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="1Ci-pd-JZ4" secondAttribute="trailing" constant="-25" id="4Wg-Py-ZPn"/>
-                        <constraint firstItem="kfu-ix-ppz" firstAttribute="top" secondItem="1Ci-pd-JZ4" secondAttribute="bottom" id="4f2-xg-8Tj"/>
+                        <constraint firstAttribute="bottom" secondItem="kfu-ix-ppz" secondAttribute="bottom" id="BhI-hl-GUu"/>
+                        <constraint firstItem="kfu-ix-ppz" firstAttribute="top" secondItem="UT0-id-DMz" secondAttribute="bottom" constant="10" id="Uuw-l0-Y7H"/>
                         <constraint firstAttribute="trailing" secondItem="kfu-ix-ppz" secondAttribute="trailing" constant="15" id="VPW-De-UbK"/>
-                        <constraint firstItem="UT0-id-DMz" firstAttribute="centerY" secondItem="1Ci-pd-JZ4" secondAttribute="centerY" id="bf2-Kl-TlT"/>
+                        <constraint firstItem="UT0-id-DMz" firstAttribute="top" secondItem="Eq8-c9-ddn" secondAttribute="top" constant="8.5" id="cNz-oa-RXh"/>
                         <constraint firstAttribute="bottom" secondItem="kfu-ix-ppz" secondAttribute="bottom" id="dJk-Xf-HKv"/>
                         <constraint firstItem="UT0-id-DMz" firstAttribute="leading" secondItem="kfu-ix-ppz" secondAttribute="leading" id="eKH-Zo-uTM"/>
-                        <constraint firstAttribute="height" constant="152" id="r0a-xw-ATA"/>
                         <constraint firstItem="kfu-ix-ppz" firstAttribute="leading" secondItem="Eq8-c9-ddn" secondAttribute="leading" constant="15" id="yVs-hz-qb7"/>
                     </constraints>
                 </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" delaysContentTouches="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WGF-8w-zTJ">
-                    <rect key="frame" x="0.0" y="12.5" width="414" height="747.5"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" delaysContentTouches="NO" canCancelContentTouches="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WGF-8w-zTJ">
+                    <rect key="frame" x="0.0" y="137.5" width="414" height="569"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="t92-nr-bJj"/>
@@ -82,15 +86,19 @@
                 <constraint firstItem="WGF-8w-zTJ" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="024-GG-jQS"/>
                 <constraint firstItem="a0g-92-eoF" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="1qP-OP-jdp"/>
                 <constraint firstItem="a0g-92-eoF" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="9nH-Uv-haU"/>
-                <constraint firstItem="WGF-8w-zTJ" firstAttribute="top" secondItem="a0g-92-eoF" secondAttribute="bottom" priority="750" constant="-175" id="Aff-LK-5hx"/>
-                <constraint firstItem="Eq8-c9-ddn" firstAttribute="bottom" secondItem="Q5M-cg-NOt" secondAttribute="bottom" constant="34" id="F3r-Yn-TNL"/>
+                <constraint firstItem="WGF-8w-zTJ" firstAttribute="top" secondItem="a0g-92-eoF" secondAttribute="bottom" priority="750" constant="-50" id="Aff-LK-5hx"/>
+                <constraint firstItem="Eq8-c9-ddn" firstAttribute="bottom" secondItem="Q5M-cg-NOt" secondAttribute="bottom" id="F3r-Yn-TNL"/>
                 <constraint firstItem="Eq8-c9-ddn" firstAttribute="top" secondItem="WGF-8w-zTJ" secondAttribute="bottom" priority="750" id="GEr-jH-3kb"/>
                 <constraint firstItem="Eq8-c9-ddn" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="LKa-ia-axI"/>
+                <constraint firstItem="pHv-Np-2GG" firstAttribute="leading" secondItem="a0g-92-eoF" secondAttribute="leading" id="OWy-A0-N5R"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="a0g-92-eoF" secondAttribute="trailing" id="QCC-Kc-EM4"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="WGF-8w-zTJ" secondAttribute="trailing" id="UH7-og-T8C"/>
+                <constraint firstItem="pHv-Np-2GG" firstAttribute="bottom" secondItem="a0g-92-eoF" secondAttribute="bottom" id="VjC-97-Pdq"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="Eq8-c9-ddn" secondAttribute="trailing" id="ZaQ-d7-NY5"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="WGF-8w-zTJ" secondAttribute="bottom" priority="250" constant="10" id="b7t-cP-Gj0"/>
                 <constraint firstItem="WGF-8w-zTJ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" priority="250" constant="15" id="cNY-S0-s3g"/>
+                <constraint firstItem="pHv-Np-2GG" firstAttribute="trailing" secondItem="a0g-92-eoF" secondAttribute="trailing" id="cn3-1E-6ix"/>
+                <constraint firstItem="pHv-Np-2GG" firstAttribute="top" secondItem="a0g-92-eoF" secondAttribute="top" id="fuj-oN-e87"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -98,11 +106,9 @@
         </view>
     </objects>
     <resources>
+        <image name="gg" width="375" height="170"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemYellowColor">
-            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
