--- a/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/BYRechargeUSDTTopView.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/BYRechargeUSDTTopView.xib
@@ -91,6 +91,9 @@
                                     <state key="normal" title=" 选择协议" image="疑问">
                                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </state>
+                                    <connections>
+                                        <action selector="didTapQuestion:" destination="iN0-l3-epB" eventType="touchUpInside" id="HnB-oF-dUn"/>
+                                    </connections>
                                 </button>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Srg-ZK-W49">
                                     <rect key="frame" x="0.0" y="53" width="415" height="1"/>
