--- a/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/Controller/BYRechargeUsdtVC.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/Controller/BYRechargeUsdtVC.xib
@@ -34,7 +34,7 @@
                         <action selector="didTapTopBannerImage:" destination="-1" eventType="touchUpInside" id="VEf-o6-KtK"/>
                     </connections>
                 </button>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a0g-92-eoF">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gg" translatesAutoresizingMaskIntoConstraints="NO" id="a0g-92-eoF">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="187.5"/>
                     <accessibility key="accessibilityConfiguration">
                         <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
@@ -45,7 +45,7 @@
                     </constraints>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eq8-c9-ddn">
-                    <rect key="frame" x="0.0" y="706.5" width="414" height="171.5"/>
+                    <rect key="frame" x="0.0" y="696.5" width="414" height="171.5"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kfu-ix-ppz" customClass="SDCycleScrollView">
                             <rect key="frame" x="15" y="38" width="384" height="133.5"/>
@@ -72,8 +72,8 @@
                         <constraint firstItem="kfu-ix-ppz" firstAttribute="leading" secondItem="Eq8-c9-ddn" secondAttribute="leading" constant="15" id="yVs-hz-qb7"/>
                     </constraints>
                 </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" delaysContentTouches="NO" canCancelContentTouches="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WGF-8w-zTJ">
-                    <rect key="frame" x="0.0" y="137.5" width="414" height="569"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WGF-8w-zTJ">
+                    <rect key="frame" x="0.0" y="137.5" width="414" height="559"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="t92-nr-bJj"/>
@@ -88,7 +88,7 @@
                 <constraint firstItem="a0g-92-eoF" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="1qP-OP-jdp"/>
                 <constraint firstItem="a0g-92-eoF" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="9nH-Uv-haU"/>
                 <constraint firstItem="WGF-8w-zTJ" firstAttribute="top" secondItem="a0g-92-eoF" secondAttribute="bottom" priority="750" constant="-50" id="Aff-LK-5hx"/>
-                <constraint firstItem="Eq8-c9-ddn" firstAttribute="bottom" secondItem="Q5M-cg-NOt" secondAttribute="bottom" id="F3r-Yn-TNL"/>
+                <constraint firstItem="Eq8-c9-ddn" firstAttribute="bottom" secondItem="Q5M-cg-NOt" secondAttribute="bottom" constant="-10" id="F3r-Yn-TNL"/>
                 <constraint firstItem="Eq8-c9-ddn" firstAttribute="top" secondItem="WGF-8w-zTJ" secondAttribute="bottom" priority="750" id="GEr-jH-3kb"/>
                 <constraint firstItem="Eq8-c9-ddn" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="LKa-ia-axI"/>
                 <constraint firstItem="pHv-Np-2GG" firstAttribute="leading" secondItem="a0g-92-eoF" secondAttribute="leading" id="OWy-A0-N5R"/>
@@ -107,6 +107,7 @@
         </view>
     </objects>
     <resources>
+        <image name="gg" width="375" height="170"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
